--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "motion": "^12.23.11",
     "next": "15.4.4",
     "react": "19.1.0",
