--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["erformance", "ervers", "IPFS", "Maxius"]
+  "cSpell.words": ["erformance", "ervers", "IPFS", "Maxius", "Metaverse"]
 }
