feat(section): add story section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-  "cSpell.words": ["erformance", "ervers", "IPFS", "Maxius", "Metaverse"]
+  "cSpell.words": [
+    "Agro",
+    "Cheongwadae",
+    "Coporation",
+    "erformance",
+    "ervers",
+    "Gunpo",
+    "IPFS",
+    "KHNP",
+    "Maxius",
+    "Metaverse"
+  ]
 }
